--- a/TimeChartEditor/TimeChartEditor/TimeChartEditor.csproj
+++ b/TimeChartEditor/TimeChartEditor/TimeChartEditor.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ActUtlTypeLib">
       <HintPath>D:\Park\PLC\LG\CPC 자료 - v4\CA_HMI_PLC\Sample_References2010 - 복사본\bin\Debug\ActUtlTypeLib.dll</HintPath>
     </Reference>
