--- a/TimeChartEditor/TimeChartEditor/TimeChartEditor.csproj
+++ b/TimeChartEditor/TimeChartEditor/TimeChartEditor.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
+    <PackageReference Include="OpenCvSharp4" Version="4.7.0.20230115" />
   </ItemGroup>
 
   <ItemGroup>
