레이아웃 디자인 추가

--- a/Pinokio.MPV/SandBox/SandBox.csproj
+++ b/Pinokio.MPV/SandBox/SandBox.csproj
@@ -39,6 +39,8 @@
   <ItemGroup>
     <Compile Include="Communication.cs" />
     <Compile Include="LangMatcher.cs" />
+    <Compile Include="SocketClient.cs" />
+    <Compile Include="SocketServer.cs" />
     <Compile Include="Testbed.cs" />
     <Compile Include="Woon.cs" />
   </ItemGroup>
