--- a/Pinokio.MPV/Pinokio.MPV/Pinokio.MPV.csproj
+++ b/Pinokio.MPV/Pinokio.MPV/Pinokio.MPV.csproj
@@ -49,6 +49,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MathUtils.cs" />
     <Compile Include="StartMenu.cs">
       <SubType>Form</SubType>
@@ -59,7 +65,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeChart.cs" />
+    <Compile Include="VerifierForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerifierForm.Designer.cs">
+      <DependentUpon>VerifierForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="WinFormUtils.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -72,6 +87,9 @@
     </Compile>
     <EmbeddedResource Include="StartMenu.resx">
       <DependentUpon>StartMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VerifierForm.resx">
+      <DependentUpon>VerifierForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include=".editorconfig" />
     <None Include="packages.config" />
